--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "next": "12.3.0",
+    "next-seo": "^5.5.0",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-device-detect": "^2.2.2",
+    "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
